CDK Code and manifests/manifests/ui-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: risk
  labels:
    service: uiService
spec: 
  selector:
    app: ui
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
